--- a/DBE Exp1-ER/index.html
+++ b/DBE Exp1-ER/index.html
@@ -40,11 +40,11 @@
     </div>
     <h3><div id="title" class="bg-dark m-1 p-3 text-center" style="color: azure;"></div></h3>
     <div class="row m-1">
-        <div class="col-md-6 col-sm-12 bg-success p-3 text-center" id="imgSection" style="display:inline-block; border: beige ;">
+        <div class="col-md-6 col-sm-12 bg-success p-3 text-center" id="imgSection" style="border: beige ;">
             <img src="" class="img-responsive p-2" id="image">
         </div>
         
-        <div class="col-md-6 col-sm-12 bg-primary p-5" id="explaination" style="display:inline-block; font-weight: 500; color: wheat;"></div>
+        <div class="col-md-6 col-sm-12 bg-primary p-5" id="explaination" style="font-weight: 500; color: wheat;"></div>
     </div>
         
   </body>
